--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         .tip-container  {
             width: 50%;
-            padding: 10em;
+            padding: 10%;
         }
 
          
