--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <div class="tip-container">
 
         <div class="logo">
-            <img src="./aff.png"></h2>
+            <img src="./logo.png"></h2>
             <h3>Leave a tip?</h3>
         </div>
         <div class="flex-container">
